# xiclops

./: CMakeLists.txt  README.md
raylib/raylib-5.0_linux_amd64/lib/: libraylib.so.500
src/: main.c
